# presemble

./: .gitignore  CLAUDE.md  Cargo.toml  Polylith.toml  README.md  RELEASING.md  ROADMAP.md  VISION.md  devenv.nix  devenv.yaml  flake.nix
.claude/: settings.json
.claude/agents/: architect.md  brainstorm.md  code-minion.md  commit.md  devenv.md  devops.md  documenter.md  helix.md  metadev.md  polylith.md  product-owner.md  release-manager.md  toolsmith.md
.claude/commands/: init.md  migrate.md
.claude/skills/architect/: SKILL.md
.claude/skills/conventional-commits/: SKILL.md
.claude/skills/helix/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  release.yml
.helix/: languages.toml
.polylith/: profiles.toml
bases/editor_server/: Cargo.toml  README.md
bases/editor_server/src/: error.rs  lib.rs
bases/mcp_server/: Cargo.toml
bases/mcp_server/src/: lib.rs
bases/publisher_cli/: Cargo.toml  README.md
bases/publisher_cli/benches/: build_bench.rs  site_gen.rs
bases/publisher_cli/src/: deps.rs  error.rs  lib.rs  lsp.rs  serve.rs  template_registry.rs
bases/publisher_cli/tests/: build_test.rs
components/bencode/: Cargo.toml
components/bencode/src/: lib.rs
components/conductor/: Cargo.toml  README.md
components/conductor/src/: client.rs  conductor.rs  lib.rs  protocol.rs
components/content/: Cargo.toml  README.md
components/content/src/: adapters.rs  diff.rs  document.rs  error.rs  lib.rs  parser.rs  serializer.rs  slot_assignment.rs  slot_editor.rs  transform.rs  validator.rs
components/content_editor/: Cargo.toml
components/content_editor/src/: lib.rs
components/dep_graph/: Cargo.toml  README.md
components/dep_graph/src/: lib.rs
components/editorial_types/: Cargo.toml
components/editorial_types/src/: lib.rs
components/edn/: Cargo.toml
components/edn/src/: lib.rs
components/evaluator/: Cargo.toml
components/evaluator/src/: closure.rs  core.clj  doc_registry.rs  env.rs  lib.rs  primitives.rs
components/expressions/: Cargo.toml
components/expressions/src/: lib.rs
components/forms/: Cargo.toml
components/forms/src/: lib.rs
components/fs_site_repository/: Cargo.toml
components/fs_site_repository/src/: fs_site_repository.rs  lib.rs
components/lsp_capabilities/: Cargo.toml  README.md
components/lsp_capabilities/src/: lib.rs  lsp_capabilities.rs
components/lsp_service/: Cargo.toml  README.md
components/lsp_service/src/: lib.rs  lsp_service.rs
components/macros/: Cargo.toml
components/macros/src/: lib.rs
components/mem_site_repository/: Cargo.toml
components/mem_site_repository/src/: lib.rs  mem_site_repository.rs
components/nrepl/: Cargo.toml
components/nrepl/src/: client.rs  lib.rs
components/reader/: Cargo.toml
components/reader/src/: lib.rs
components/repl_tui/: Cargo.toml  README.md
components/repl_tui/src/: app.rs  backend.rs  lib.rs
components/schema/: Cargo.toml  README.md
components/schema/src/: error.rs  grammar.rs  lib.rs  parser.rs  span.rs
components/serve_ui/: Cargo.toml
components/serve_ui/src/: lib.rs
components/site_builder/: Cargo.toml  README.md
components/site_builder/src/: lib.rs  site_builder.rs
components/site_index/: Cargo.toml  README.md
components/site_index/src/: lib.rs  site_graph.rs  site_index.rs
components/site_templates/: Cargo.toml
components/site_templates/src/: lib.rs
components/stylesheet/: Cargo.toml
components/stylesheet/src/: lib.rs
components/template/: Cargo.toml  HICCUP_TESTS.md  README.md
components/template/src/: ast.rs  constants.rs  data.rs  dom.rs  error.rs  expr.rs  hiccup.rs  hiccup_serializer.rs  interpreter.rs  lib.rs  parser.rs  registry.rs  transformer.rs
components/template/tests/: render_test.rs
components/template_registry/: Cargo.toml
components/validation/: Cargo.toml
components/validation/src/: lib.rs  validation.rs
docs/adr/: 001-markdown-based-schema-format.md  002-record-slots-and-type-references.md  003-markdown-parser-choice.md  004-template-language.md  005-templates-are-data.md  006-serve-architecture.md  007-crawl-based-publishing.md  008-incremental-rebuild.md  009-clean-url-convention.md  010-data-driven-asset-discovery.md  011-hiccup-template-syntax.md  012-cross-content-reference-resolution.md  013-template-composition.md  014-url-serialization.md  015-lsp-server.md  016-unified-validation.md  017-document-as-first-class-citizen.md  018-unified-code-actions.md  019-suggestion-nodes.md  020-conductor-daemon.md  021-persistent-dom-trees.md  022-slotted-document-structure.md  023-transform-trait.md  024-structural-diff.md  025-consumer-adapters.md  026-site-graph.md  027-asset-store-browser-separation.md  028-polylith-profile-polymorphism.md  029-stylesheets-as-site-graph-nodes.md  030-pure-template-composition.md  031-conductor-as-sole-authority.md  032-ned-node-editor.md  033-per-document-versioning.md  034-asset-lifecycle.md  035-workspace-conductor.md  036-evaluator-bootstrap-prelude.md  037-unified-build-pipeline.md  038-repl-and-documentation-metadata.md  039-repl-and-documentation-metadata.md
example-sites/blog/assets/: style.css
example-sites/blog/schemas/: index.md
example-sites/personal/assets/: style.css
example-sites/personal/content/: index.md
example-sites/personal/schemas/: index.md
example-sites/portfolio/assets/: style.css
example-sites/portfolio/content/: index.md
profiles/: dev.profile  development.profile  live.profile
profiles/dev/: Cargo.toml  bases
projects/content_management/: Cargo.toml
projects/content_management/src/: main.rs
projects/publisher/: Cargo.toml  README.md
projects/publisher/src/: main.rs
resources/serve/: inject.css  inject.js  welcome.html
site/.presemble/: github-pages.json
site/assets/: style.css
site/content/: index.md
site/schemas/: docs.md  feature.md  guide.md  index.md  post.md
site/templates/: author.hiccup  author.html  docs.html  feature.html  footer.hiccup  footer.html  header.hiccup  header.html  index.hiccup  index.html  post.html
src/: lib.rs
tools/: smoketest.sh
(+108 files in other folders)
