[package]
name = "publisher_cli"
version = "0.9.2"
edition = "2024"

[dependencies]
schema = { workspace = true }
content = { workspace = true }
template = { workspace = true }
dep_graph = { workspace = true }
site_index = { workspace = true }
lsp_capabilities = { workspace = true }
lsp_service = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
