[package]
name = "publisher_cli"
version = "0.24.0"
edition = "2024"

[dependencies]
schema = { workspace = true }
content = { workspace = true }
template = { workspace = true }
expressions = { workspace = true }
dep_graph = { workspace = true }
conductor = { workspace = true }
editorial_types = { workspace = true }
editor_server = { workspace = true }
mcp_server = { workspace = true }
site_repository = { workspace = true }
site_index = { workspace = true }
lsp_capabilities = { workspace = true }
lsp_service = { workspace = true }
stylesheet = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "build_bench"
harness = false
