[package]
name = "conductor"
version = "0.30.0"
edition = "2024"

[package.metadata.polylith]
interface = "conductor"

[dependencies]
dep_graph = { workspace = true }
editorial_types = { workspace = true }
content_editor = { workspace = true }
site_repository = { workspace = true }
schema = { workspace = true }
content = { workspace = true }
template = { workspace = true }
site_index = { workspace = true }
validation = { workspace = true }
site_templates = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nng = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = "3"
