[package]
name = "expressions"
version = "0.31.0"
edition = "2024"

[package.metadata.polylith]
interface = "expressions"

[dependencies]
content = { workspace = true }
template = { workspace = true }
site_index = { workspace = true }

[dev-dependencies]
site_repository = { workspace = true }
tempfile = "3"
