[package]
name = "lsp_capabilities"
version = "0.31.0"
edition = "2024"

[package.metadata.polylith]
interface = "lsp_capabilities"

[dependencies]
schema = { workspace = true }
content = { workspace = true }
template = { workspace = true }
validation = { workspace = true }
site_repository = { workspace = true }
site_index = { workspace = true }
