[package]
name = "lsp_service"
version = "0.2.2"
edition = "2024"

[package.metadata.polylith]
interface = "lsp_service"

[dependencies]
lsp_capabilities = { path = "../../components/lsp_capabilities" }
content = { path = "../../components/content" }
schema = { path = "../../components/schema" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
