[package]
name = "lsp_service"
version = "0.2.2"
edition = "2024"

[package.metadata.polylith]
interface = "lsp_service"

[dependencies]
lsp_capabilities = { workspace = true }
content = { workspace = true }
schema = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
