[package]
name = "lsp_service"
version = "0.12.0"
edition = "2024"

[package.metadata.polylith]
interface = "lsp_service"

[dependencies]
conductor = { workspace = true }
lsp_capabilities = { workspace = true }
content = { workspace = true }
schema = { workspace = true }
site_index = { workspace = true }
fs_site_repository = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
