[package]
name = "template"
version = "0.21.0"
edition = "2024"

[package.metadata.polylith]
interface = "template"

[dependencies]
schema = { workspace = true }
content = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
im = { workspace = true }
pulldown-cmark = { workspace = true }
