[package]
name = "publisher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "publisher"
path = "src/main.rs"

[dependencies]
# Add base and component deps here, e.g.:
# my-base = { path = "../../bases/my-base" }
# my-component-stub = { path = "../../components/my-component-stub", package = "my-component-stub" }
